ready to start testing new vaegan loss functions

--- a/notebooks/train_vaegan.ipynb
+++ b/notebooks/train_vaegan.ipynb
@@ -13,9 +13,11 @@
     "* https://github.com/anitan0925/vaegan/blob/master/examples/train.py\n",
     "  * Runs 20 epochs on separate VAE and GAN then 200 on VAEGAN\n",
     "* https://github.com/jlindsey15/VAEGAN/blob/master/main.py\n",
-    "  * Clear code for vaegan paper\n",
+    "  * Almost clear code for vaegan paper\n",
     "* https://arxiv.org/pdf/1512.09300.pdf\n",
     "  * vaegan paper\n",
+    "* https://github.com/timsainb/Tensorflow-MultiGPU-VAE-GAN\n",
+    "  * Best code yet!\n",
     "  "
    ]
   },
