removing clips from vaegan losses

--- a/notebooks/train_vaegan.ipynb
+++ b/notebooks/train_vaegan.ipynb
@@ -30,9 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded backend module://ipykernel.pylab.backend_inline version unknown.\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import env\n",
     "from train_vaegan import train_vaegan\n",
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,14 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['pgrep', 'tensorboard'] yielded -> b''\n"
+      "['pgrep', 'tensorboard'] yielded -> b'15992\\n'\n",
+      "killed b'15992'!\n"
      ]
     }
    ],
@@ -203,15 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-16_10-45-27\n",
-      "['pgrep', 'tensorboard'] yielded -> b''\n"
+      "/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-16_12-31-46\n",
+      "['pgrep', 'tensorboard'] yielded -> b'18552\\n'\n",
+      "killed b'18552'!\n"
      ]
     }
    ],
@@ -223,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -258,17 +270,17 @@
       "WARNING - root - Added new config entry: \"cfg.model.voxel_prob_threshold\"\n",
       "WARNING - root - Added new config entry: \"cfg.model.voxels_dim\"\n",
       "INFO - voxel_vaegan_notebook - Running command 'run_experiment'\n",
-      "INFO - voxel_vaegan_notebook - Started run with ID \"139\"\n"
+      "INFO - voxel_vaegan_notebook - Started run with ID \"151\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logging to /home/jcworkma/jack/3d-form/src/logs/2019-03-16_10-45__root.log\n",
+      "Logging to /home/jcworkma/jack/3d-form/src/logs/2019-03-16_12-31__root.log\n",
       "Starting train_vaegan main\n",
-      "Numpy random seed: 341983534\n",
-      "Saved cfg: /home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-16_10-45-27/cfg.json\n",
+      "Numpy random seed: 720678588\n",
+      "Saved cfg: /home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-16_12-31-46/cfg.json\n",
       "Dataset: <class 'data.modelnet10.ModelNet10'>\n",
       "Using dataset index /home/jcworkma/jack/3d-form/src/../data/processed/modelnet10_sofa_index.csv and pctile None\n",
       "Shuffling dataset\n",
@@ -296,51 +308,32 @@
       "decoder/batch_normalization_4/batchnorm/add_1:0: (?, 32, 32, 32, 8)\n",
       "decoder/dec_conv5/conv3d_transpose:0: (?, 32, 32, 32, 1)\n",
       "decoder/Sigmoid:0: (?, 32, 32, 32, 1)\n",
+      "input_z: (?, 100)\n",
+      "decoder_1/dec_dense1/BiasAdd:0: (?, 343)\n",
+      "decoder_1/Elu:0: (?, 343)\n",
+      "decoder_1/reshape_z:0: (?, 7, 7, 7, 1)\n",
+      "decoder_1/batch_normalization_1/batchnorm/add_1:0: (?, 7, 7, 7, 64)\n",
+      "decoder_1/batch_normalization_2/batchnorm/add_1:0: (?, 15, 15, 15, 32)\n",
+      "decoder_1/batch_normalization_3/batchnorm/add_1:0: (?, 15, 15, 15, 16)\n",
+      "decoder_1/batch_normalization_4/batchnorm/add_1:0: (?, 32, 32, 32, 8)\n",
+      "decoder_1/dec_conv5/conv3d_transpose:0: (?, 32, 32, 32, 1)\n",
+      "decoder_1/Sigmoid:0: (?, 32, 32, 32, 1)\n",
       "input_x: (?, 32, 32, 32, 1)\n",
       "discriminator/Elu:0: (?, 16, 16, 16, 128)\n",
       "discriminator/Elu_1:0: (?, 8, 8, 8, 256)\n",
       "discriminator/Elu_2:0: (?, 4, 4, 4, 512)\n",
       "discriminator/conv3d_3/Conv3D:0: (?, 1, 1, 1, 1)\n",
-      "discriminator/Sigmoid:0: (?, 1, 1, 1, 1)\n",
+      "discriminator/flatten/Reshape:0: (?, 1)\n",
+      "discriminator/Elu_3:0: (?, 1024)\n",
+      "discriminator/D/BiasAdd:0: (?, 1)\n",
       "input_x: (?, 32, 32, 32, 1)\n",
       "discriminator_1/Elu:0: (?, 16, 16, 16, 128)\n",
       "discriminator_1/Elu_1:0: (?, 8, 8, 8, 256)\n",
       "discriminator_1/Elu_2:0: (?, 4, 4, 4, 512)\n",
       "discriminator_1/conv3d_3/Conv3D:0: (?, 1, 1, 1, 1)\n",
-      "discriminator_1/Sigmoid:0: (?, 1, 1, 1, 1)\n",
-      "['tensorboard', '--logdir', 'current:/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-16_10-45-27/tb,best_sofa_and_toilet:/home/jcworkma/jack/3d-form/models/voxel_vaegan1/modelnet10/2019-03-15_17-08-43/tb']\n",
-      "Epoch: 0, Elapsed Time: 0.03\n",
-      "Epoch: 0 / 2, Batch: 0 (0 / 32), Elapsed time: 0.03 mins\n",
-      "DEBUG_OP \"dis_loss_real\": 1.2640255689620972\n",
-      "DEBUG_OP \"dis_loss_fake\": 0.09095412492752075\n",
-      "DEBUG_OP \"dis_loss\": 1.3549797534942627\n",
-      "Failed to train vaegan\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jcworkma/jack/3d-form/src/train_vaegan.py\", line 155, in train_vaegan\n",
-      "    learning_rate=rate)\n",
-      "  File \"/home/jcworkma/jack/3d-form/src/models/voxel_vaegan.py\", line 636, in train\n",
-      "    enc_loss, kl, recon, dis_loss, dec_loss = results\n",
-      "ValueError: not enough values to unpack (expected 5, got 3)\n",
-      "Stopping Heartbeat\n",
-      "Failed after 0:00:13!\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 5, got 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-808f5a7a5d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mlast_model_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_dir\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_updates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/jack/3d-form/.3d-form/lib/python3.5/site-packages/sacred/experiment.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, command_name, config_updates, named_configs, meta_info, options)\u001b[0m\n\u001b[1;32m    207\u001b[0m         run = self._create_run(command_name, config_updates, named_configs,\n\u001b[1;32m    208\u001b[0m                                meta_info, options)\n\u001b[0;32m--> 209\u001b[0;31m         \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mrun\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jack/3d-form/.3d-form/lib/python3.5/site-packages/sacred/run.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    219\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_start_heartbeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_execute_pre_run_hooks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_execute_post_run_hooks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jack/3d-form/.3d-form/lib/python3.5/site-packages/sacred/config/captured_function.py\u001b[0m in \u001b[0;36mcaptured_function\u001b[0;34m(wrapped, instance, args, kwargs)\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;31m# =================== run actual function =================================\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m     \u001b[0;31m# =========================================================================\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-c246947c91ce>\u001b[0m in \u001b[0;36mrun_experiment\u001b[0;34m(cfg)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrun_experiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mtrain_vaegan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jack/3d-form/src/train_vaegan.py\u001b[0m in \u001b[0;36mtrain_vaegan\u001b[0;34m(cfg)\u001b[0m\n\u001b[1;32m    171\u001b[0m         \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Failed to train vaegan'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m         \u001b[0mvaegan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 173\u001b[0;31m         \u001b[0;32mraise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    174\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m     \u001b[0;31m### Test Model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jack/3d-form/src/train_vaegan.py\u001b[0m in \u001b[0;36mtrain_vaegan\u001b[0;34m(cfg)\u001b[0m\n\u001b[1;32m    153\u001b[0m                          \u001b[0msave_step\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcfg_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'save_step'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    154\u001b[0m                          \u001b[0mdev_step\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcfg_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dev_step'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 155\u001b[0;31m                          learning_rate=rate)\n\u001b[0m\u001b[1;32m    156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m             \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jack/3d-form/src/models/voxel_vaegan.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, train_generator, dev_generator, test_generator, epochs, input_repeats, display_step, save_step, viz_data, dev_step, learning_rate)\u001b[0m\n\u001b[1;32m    634\u001b[0m                     \u001b[0mdec_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m999\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    635\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 636\u001b[0;31m                     \u001b[0menc_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdis_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdec_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    637\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    638\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 5, got 3)"
+      "discriminator_1/flatten/Reshape:0: (?, 1)\n",
+      "discriminator_1/Elu_3:0: (?, 1024)\n",
+      "discriminator_1/D/BiasAdd:0: (?, 1)\n"
      ]
     }
    ],
